Añadidas rutas en el proyecto

--- a/src/app/principal/principal.component.html
+++ b/src/app/principal/principal.component.html
@@ -1,1 +1,8 @@
-<h1>Ahora yo soy el componente principal</h1>
+<div class="container">
+    <h1>Routing</h1>
+    <ul class="list-group">
+        <li class="list-group-item" [routerLink]="['/databinding', 'Raúl Ramírez']">Databinding</li>
+        <li class="list-group-item" [routerLink]="['/directives']">Directives</li>
+        <li class="list-group-item" [routerLink]="['/pipes']">Pipes</li>
+    </ul>
+</div>
