--- a/src/app/principal/principal.component.html
+++ b/src/app/principal/principal.component.html
@@ -4,5 +4,6 @@
         <li class="list-group-item" [routerLink]="['/databinding', 'Raúl Ramírez']">Databinding</li>
         <li class="list-group-item" [routerLink]="['/directives']">Directives</li>
         <li class="list-group-item" [routerLink]="['/pipes']">Pipes</li>
+        <li class="list-group-item" [routerLink]="['/forms']">Reactive forms</li>
     </ul>
 </div>
