--- a/src/app/principal/principal.component.html
+++ b/src/app/principal/principal.component.html
@@ -5,5 +5,6 @@
         <li class="list-group-item" [routerLink]="['/directives']">Directives</li>
         <li class="list-group-item" [routerLink]="['/pipes']">Pipes</li>
         <li class="list-group-item" [routerLink]="['/forms']">Reactive forms</li>
+        <li class="list-group-item" [routerLink]="['/services']">Services</li>
     </ul>
 </div>
