Consuminedo api con HttpClient

--- a/src/app/principal/principal.component.html
+++ b/src/app/principal/principal.component.html
@@ -6,5 +6,6 @@
         <li class="list-group-item" [routerLink]="['/pipes']">Pipes</li>
         <li class="list-group-item" [routerLink]="['/forms']">Reactive forms</li>
         <li class="list-group-item" [routerLink]="['/services']">Services</li>
+        <li class="list-group-item" [routerLink]="['/rest_people']">People HTTP</li>
     </ul>
 </div>
