Preparado proyecto para utilizar firebase

--- a/src/app/principal/principal.component.html
+++ b/src/app/principal/principal.component.html
@@ -7,5 +7,6 @@
         <li class="list-group-item" [routerLink]="['/forms']">Reactive forms</li>
         <li class="list-group-item" [routerLink]="['/services']">Services</li>
         <li class="list-group-item" [routerLink]="['/rest_people']">People HTTP</li>
+        <li class="list-group-item" [routerLink]="['/firebase']">CRUD with firebase</li>
     </ul>
 </div>
