--- a/src/app/firebase/firebase.component.html
+++ b/src/app/firebase/firebase.component.html
@@ -1,3 +1,46 @@
 <div class="container my-5">
-    
+    <div class="row">
+        <div class="col-8 p-4">
+            <h1 class="m-2 text-center">PEOPLE</h1>
+            <ul class="list-group p-2">
+                <li class="list-group-item" *ngFor="let person of people">
+                    <p>Name: {{ person.name }}</p>
+                    <p>Lastname: {{ person.lastname }}</p>
+                    <p>DNI: {{ person.dni }}</p>
+                    <p>Age: {{ person.age }}</p>
+                    <div class="row">
+                        <a href="#" class="btn btn-primary col" (click)="update(person)">UPDATE</a>
+                        <a href="#" class="btn btn-danger col" (click)="delete(person)">DELETE</a>
+                    </div>
+                </li>
+            </ul>
+        </div>
+        <div class="col-4 p-4">
+            <h1 class="m-2 text-center">Add new person:</h1>
+            <form action="" class="p-4">
+                <div class="form-group">
+                    <input type="hidden" id="inputId" name="$id" #$id="ngModel" [(ngModel)]="selectedPerson.$id" class="form-control">
+                </div>
+                <div class="form-group">
+                    <label for="inputName">Name:</label>
+                    <input type="text" id="inputName" name="name" #name="ngModel" [(ngModel)]="selectedPerson.name" class="form-control">
+                </div>
+                <div class="form-group">
+                    <label for="inputLastname">Lastname:</label>
+                    <input type="text" id="inputLastname" name="lastname" #lastname="ngModel" [(ngModel)]="selectedPerson.lastname" class="form-control">
+                </div>
+                <div class="form-group">
+                    <label for="inputDni">DNI:</label>
+                    <input type="text" id="inputDni" name="dni" #dni="ngModel" [(ngModel)]="selectedPerson.dni" class="form-control">
+                </div>
+                <div class="form-group">
+                    <label for="inputAge">Age:</label>
+                    <input type="text" id="inputAge" name="age" #age="ngModel" [(ngModel)]="selectedPerson.age" class="form-control">
+                </div>
+                <div class="form-group">
+                    <button class="btn btn-success btn-block" type="submit" (click)="add()">SAVE</button>
+                </div>
+            </form>
+        </div>
+    </div>
 </div>
